--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,5 +9,24 @@
 .post-thumb{
 	width:100%; 
 }
-.post-thumbs{
-	width:25%; 
+.pagination-links{
+	margin:30px 0;
+}
+
+.pagination-links strong{
+	padding: 8px 13px;
+	margin:5px;
+	background: #f4f4f4;
+	border: 1px #ccc solid;
+}
+
+a.pagination-link{
+	padding: 8px 13px;
+	margin:5px;
+	background: #f4f4f4;
+	border: 1px #ccc solid;
+}
+
+.cat-delete{
+	display:inline;
+}
